--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+bin/test.js/
 # Dependency directories
 node_modules/
 jspm_packages/
