--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "homura-js": "^1.4.2",
     "isomorphic-unfetch": "^4.0.2",
     "node-fetch": "^3.3.2",
+    "node-id3": "^0.2.6",
     "spotify-to-ytmusic": "^1.2.6",
     "spotify-url-info": "^3.2.8",
+    "spotify-web-api-node": "^5.0.2",
     "yargs": "^17.7.2",
     "ytdl-core": "^4.11.5",
     "ytsr": "^3.8.4"
